Fix info portrait ratio on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1043,6 +1043,8 @@
 
   .info-portrait {
     width: 50%;
+    aspect-ratio: 4/5;
+    height: auto;
   }
 
   .info-text {
